--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,19 +21,37 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-3 mb-3">
-                            <label for="troncalFilter">Troncal</label>
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <label for="troncalFilter">Troncal</label>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="enableTroncalFilter">
+                                    <label class="form-check-label" for="enableTroncalFilter">Activar</label>
+                                </div>
+                            </div>
                             <select id="troncalFilter" class="form-select">
                                 <option value="all">Todas las Troncales</option>
                             </select>
                         </div>
                         <div class="col-md-3 mb-3">
-                            <label for="stationFilter">Estación</label>
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <label for="stationFilter">Estación</label>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="enableStationFilter">
+                                    <label class="form-check-label" for="enableStationFilter">Activar</label>
+                                </div>
+                            </div>
                             <select id="stationFilter" class="form-select">
                                 <option value="all">Todas las Estaciones</option>
                             </select>
                         </div>
                         <div class="col-md-3 mb-3">
-                            <label for="incidentTypeFilter">Tipo de Incidente</label>
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <label for="incidentTypeFilter">Tipo de Incidente</label>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="enableIncidentTypeFilter">
+                                    <label class="form-check-label" for="enableIncidentTypeFilter">Activar</label>
+                                </div>
+                            </div>
                             <select id="incidentTypeFilter" class="form-select">
                                 <option value="all">Todos los Tipos</option>
                                 <option value="Hurto">Hurto</option>
@@ -42,7 +60,13 @@
                             </select>
                         </div>
                         <div class="col-md-3 mb-3">
-                            <label for="securityLevelFilter">Nivel de Seguridad</label>
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <label for="securityLevelFilter">Nivel de Seguridad</label>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="enableSecurityLevelFilter">
+                                    <label class="form-check-label" for="enableSecurityLevelFilter">Activar</label>
+                                </div>
+                            </div>
                             <select id="securityLevelFilter" class="form-select">
                                 <option value="all">Todos los Niveles</option>
                                 <option value="Alto">Alto</option>
