--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -61,6 +61,10 @@
                                 <option value="Apertura de Puertas">Apertura de Puertas</option>
                                 <option value="Sospechoso">Sospechoso</option>
                                 <option value="Acoso">Acoso</option>
+                                <option value="Vandalismo">Vandalismo</option>
+                                <option value="Venta ambulante">Venta ambulante</option>
+                                <option value="Riña">Riña</option>
+                                <option value="Otro">Otro</option>
                             </select>
                         </div>
                         <div class="col-md-3 mb-3">
