--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -64,6 +64,12 @@
                                 <option value="Vandalismo">Vandalismo</option>
                                 <option value="Venta ambulante">Venta ambulante</option>
                                 <option value="Riña">Riña</option>
+                                <option value="Agresión física">Agresión física</option>
+                                <option value="Agresión verbal">Agresión verbal</option>
+                                <option value="Consumo de drogas">Consumo de drogas</option>
+                                <option value="Evasión de pago">Evasión de pago</option>
+                                <option value="Acoso sexual">Acoso sexual</option>
+                                <option value="Alteración del orden">Alteración del orden</option>
                                 <option value="Otro">Otro</option>
                             </select>
                         </div>
