--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -36,11 +36,27 @@
                                 <option value="all">Todos</option>
                             </select>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-4">
                             <label class="form-label">Troncal</label>
                             <select class="form-select" id="troncalFilter">
                                 <option value="all">Todas</option>
                             </select>
+                        </div>
+                        <div class="col-md-4">
+                            <label class="form-label">Estación</label>
+                            <select class="form-select" id="stationFilter">
+                                <option value="all">Todas</option>
+                            </select>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="mt-4">
+                                <button class="btn btn-primary w-100" id="applyFilters">
+                                    Aplicar Filtros
+                                </button>
+                                <button class="btn btn-secondary w-100 mt-2" id="resetFilters">
+                                    Resetear Filtros
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
