--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -52,7 +52,8 @@
             </div>
         </div>
     </div>
-    <!-- Cards de resumen -->
+    <!-- Información General -->
+    <h4 class="mb-4">Información General</h4>
     <div class="row mb-4">
         <div class="col-md-3">
             <div class="card">
@@ -106,6 +107,30 @@
                     <h5 class="card-title">Top 5 Estaciones más Inseguras</h5>
                     <div style="height: 300px">
                         <canvas id="topStationsChart"></canvas>
+
+    <!-- Datos Filtrados -->
+    <h4 class="mb-4">Datos Filtrados</h4>
+    <div class="card">
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table" id="filteredDataTable">
+                    <thead>
+                        <tr>
+                            <th>Fecha</th>
+                            <th>Hora</th>
+                            <th>Tipo de Incidente</th>
+                            <th>Estación</th>
+                            <th>Troncal</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
                     </div>
                 </div>
             </div>
