--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -70,19 +70,43 @@
             <h5 class="card-title">Filtros de Búsqueda</h5>
             <div class="row">
                 <div class="col-md-3 mb-3">
-                    <label for="dateFromFilter">Fecha Desde</label>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <label for="dateFromFilter">Fecha Desde</label>
+                        <div class="form-check">
+                            <input type="checkbox" id="enableDateFromFilter" class="form-check-input">
+                            <label class="form-check-label" for="enableDateFromFilter">Activar</label>
+                        </div>
+                    </div>
                     <input type="date" id="dateFromFilter" class="form-control">
                 </div>
                 <div class="col-md-3 mb-3">
-                    <label for="dateToFilter">Fecha Hasta</label>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <label for="dateToFilter">Fecha Hasta</label>
+                        <div class="form-check">
+                            <input type="checkbox" id="enableDateToFilter" class="form-check-input">
+                            <label class="form-check-label" for="enableDateToFilter">Activar</label>
+                        </div>
+                    </div>
                     <input type="date" id="dateToFilter" class="form-control">
                 </div>
                 <div class="col-md-3 mb-3">
-                    <label for="timeFromFilter">Hora Desde</label>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <label for="timeFromFilter">Hora Desde</label>
+                        <div class="form-check">
+                            <input type="checkbox" id="enableTimeFromFilter" class="form-check-input">
+                            <label class="form-check-label" for="enableTimeFromFilter">Activar</label>
+                        </div>
+                    </div>
                     <input type="time" id="timeFromFilter" class="form-control">
                 </div>
                 <div class="col-md-3 mb-3">
-                    <label for="timeToFilter">Hora Hasta</label>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <label for="timeToFilter">Hora Hasta</label>
+                        <div class="form-check">
+                            <input type="checkbox" id="enableTimeToFilter" class="form-check-input">
+                            <label class="form-check-label" for="enableTimeToFilter">Activar</label>
+                        </div>
+                    </div>
                     <input type="time" id="timeToFilter" class="form-control">
                 </div>
             </div>
