--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -112,21 +112,39 @@
             </div>
             <div class="row">
                 <div class="col-md-4 mb-3">
-                    <label for="troncalFilter">Troncal</label>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <label for="troncalFilter">Troncal</label>
+                        <div class="form-check">
+                            <input type="checkbox" id="enabletroncalFilter" class="form-check-input">
+                            <label class="form-check-label" for="enabletroncalFilter">Activar</label>
+                        </div>
+                    </div>
                     <select id="troncalFilter" class="form-select">
-                        <option value="all">Todas</option>
+                        <option value="all">Todas las Troncales</option>
                     </select>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <label for="stationFilter">Estación</label>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <label for="stationFilter">Estación</label>
+                        <div class="form-check">
+                            <input type="checkbox" id="enablestationFilter" class="form-check-input">
+                            <label class="form-check-label" for="enablestationFilter">Activar</label>
+                        </div>
+                    </div>
                     <select id="stationFilter" class="form-select">
-                        <option value="all">Todas</option>
+                        <option value="all">Todas las Estaciones</option>
                     </select>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <label for="incidentTypeFilter">Tipo de Incidente</label>
+                    <div class="d-flex justify-content-between align-items-center">
+                        <label for="incidentTypeFilter">Tipo de Incidente</label>
+                        <div class="form-check">
+                            <input type="checkbox" id="enableincidentTypeFilter" class="form-check-input">
+                            <label class="form-check-label" for="enableincidentTypeFilter">Activar</label>
+                        </div>
+                    </div>
                     <select id="incidentTypeFilter" class="form-select">
-                        <option value="all">Todos</option>
+                        <option value="all">Todos los Tipos</option>
                     </select>
                 </div>
             </div>
