--- a/frontend/src/styles/Map.css
+++ b/frontend/src/styles/Map.css
@@ -2,28 +2,27 @@
 .leaflet-container {
   width: 100%;
   height: 100%;
+  border-radius: 4px;
 }
 
-.marker-cluster-small {
-  background-color: rgba(181, 226, 140, 0.6);
+.station-popup {
+  padding: 10px;
 }
 
-.marker-cluster-small div {
-  background-color: rgba(110, 204, 57, 0.6);
+.station-popup h3 {
+  margin: 0 0 10px 0;
+  color: #1976d2;
 }
 
-.marker-cluster-medium {
-  background-color: rgba(241, 211, 87, 0.6);
+.station-popup p {
+  margin: 5px 0;
 }
 
-.marker-cluster-medium div {
-  background-color: rgba(240, 194, 12, 0.6);
+.station-popup ul {
+  margin: 5px 0;
+  padding-left: 20px;
 }
 
-.marker-cluster-large {
-  background-color: rgba(253, 156, 115, 0.6);
-}
-
-.marker-cluster-large div {
-  background-color: rgba(241, 128, 23, 0.6);
+.custom-div-icon {
+  text-align: center;
 }
