--- a/frontend/src/styles/Map.css
+++ b/frontend/src/styles/Map.css
@@ -3,6 +3,15 @@
   width: 100%;
   height: 100%;
   border-radius: 4px;
+  min-height: 300px;
+}
+
+#map {
+  width: 100%;
+  height: 100%;
+  min-height: 300px;
+  position: relative;
+  z-index: 1;
 }
 
 .station-popup {
