--- a/frontend/src/styles/Map.css
+++ b/frontend/src/styles/Map.css
@@ -1,15 +1,13 @@
 
 .leaflet-container {
   width: 100%;
-  height: 100%;
+  height: 400px;
   border-radius: 4px;
-  min-height: 400px;
 }
 
 #map {
   width: 100%;
-  height: 100%;
-  min-height: 300px;
+  height: 400px;
   position: relative;
   z-index: 1;
 }
